--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     document.getElementById("projects").style.display = "none";
   }
   if(document.getElementsByClassName("education-entry").length === 0) {
-    document.getElementById("education").style.display = "none";
+    document.getElementById("education").style.backgroundColor = "black";
   }
   if(document.getElementsByClassName("skills-entry").length === 0) {
     document.getElementById("skillsChart").style.display = "none";
