Made a few color changes- Orange to green

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
  
     <div id="header" class="center-content">
       <ul id="topContacts" class='flex-box'></ul>
+      <p id ="welcome" class'flex-box'></p>
     </div>
     <div style='clear: both;'></div>
     <div id="workExperience" class='gray'>
