--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
  
     <div id="header" class="center-content">
       <ul id="topContacts" class='flex-box'></ul>
-      <p id ="welcome" class'flex-box'></p>
     </div>
     <div style='clear: both;'></div>
     <div id="workExperience" class='gray'>
@@ -29,8 +28,8 @@
     <div id="mapDiv">
       <h2>Where I've Lived and Worked</h2>
     </div>
-    <div id="letsConnect" class='dark-gray'>
-      <h2 class='orange center-text'>Let's Connect</h2>
+    <div id="letsConnect" class='black'>
+      <h2 class='green center-text'>Let's Connect</h2>
       <ul id="footerContacts" class="flex-box">
       </ul>
     </div>
