updated contact info

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <link href="css/style.css" rel="stylesheet" type="text/css"></link>
+  <link rel="stylesheet" href="css/animate.min.css">
   <script src="js/jQuery.js"></script>
   <script src="js/helper.js"></script>
   <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
